# pd-mg-pin-corrosion

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  PROJECT_LOG.md  README.md  params.cfg  params_fine.cfg  params_implicit_test.cfg  params_poiseuille.cfg  params_transport_viz.cfg
config/: params.cfg  params_amr.cfg  params_amr_r2.cfg  params_calibration.cfg  params_calibration_v2.cfg  params_diagnostic.cfg  params_fine.cfg  params_fine_calibration.cfg  params_implicit_test.cfg  params_poiseuille.cfg  params_transport_viz.cfg
legacy_scripts/: pd_flow.py  pd_micro_macro_corrosion_lightweight.py
scripts/: plot_concentration.py  plot_poiseuille.py  plot_volume_loss.py
src/: boundary.cpp  boundary.h  config.cpp  config.h  coupling.cpp  coupling.h  fields.h  grains.cpp  grains.h  grid.cpp  grid.h  main.cpp  pd_ard.cpp  pd_ard.h  pd_ard_implicit.cpp  pd_ard_implicit.h  pd_ns.cpp  pd_ns.h  test_implicit.cpp  utils.h  vtk_writer.cpp  vtk_writer.h
tests/: test_amr.cpp  test_implicit.cpp
